<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/Black_50"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/Black_10">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/personal_info"
                android:textColor="@color/Blue_400"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0" />

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.rey.material.widget.EditText
                    android:id="@+id/et_firstname"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_people_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="UserName"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/White_75"
                    android:textColorHint="@color/White_95"
                    app:et_dividerCompoundPadding="true"
                    app:et_dividerErrorColor="#FFFF0000"
                    app:et_labelTextColor="@color/Blue_700"
                    app:et_supportMode="helperWithError"
                    app:et_supportSingleLine="true"
                    app:et_supportTextErrorColor="#FFFF0000" />


                <LinearLayout
                    android:id="@+id/date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="InefficientWeight">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".8"
                        android:orientation="horizontal">

                        <com.rey.material.widget.EditText
                            android:id="@+id/et_dob"
                            style="@style/Material.Widget.EditText.Light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_date_range_black_24dp"
                            android:drawablePadding="10dp"
                            android:hint="Date Of Birth"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                            android:textColor="@color/White_75"
                            android:textColorHint="@color/White_95"
                            app:et_dividerErrorColor="#FFFF0000"
                            app:et_labelTextColor="@color/Blue_700"
                            app:et_supportMode="helperWithError"
                            app:et_supportSingleLine="true"
                            app:et_supportTextErrorColor="#FFFF0000" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".2"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/edit_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_date_range_black_24dp" />


                    </LinearLayout>


                </LinearLayout>

                <com.rey.material.widget.EditText
                    android:id="@+id/et_about"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_assignment_ind_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="about"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/White_75"
                    android:textColorHint="@color/White_95"
                    app:et_dividerErrorColor="#FFFF0000"
                    app:et_labelTextColor="@color/Blue_700"
                    app:et_supportMode="helperWithError"
                    app:et_supportSingleLine="true"
                    app:et_supportTextErrorColor="#FFFF0000" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/gender"
                    android:textColor="@color/Blue_400"
                    android:textSize="16sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="@dimen/activity_horizontal_margin">


                    <RadioGroup
                        android:id="@+id/radioGrp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Male"
                            android:textColor="@color/White_75" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/female"
                            android:textColor="@color/White_75" />

                    </RadioGroup>
                </RelativeLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>
        <!-- Card Perfil -->

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/Black_10">

            <TextView
                android:id="@+id/textView3s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="Contact Info:"
                android:textColor="@color/Blue_400"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.rey.material.widget.EditText
                    android:id="@+id/et_email"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/White_75"
                    android:textColorHint="@color/White_95"
                    app:et_dividerCompoundPadding="true"
                    app:et_dividerErrorColor="#FFFF0000"
                    app:et_labelTextColor="@color/Blue_700"
                    app:et_supportMode="helperWithError"
                    app:et_supportSingleLine="true"
                    app:et_supportTextErrorColor="#FFFF0000" />


                <com.rey.material.widget.EditText
                    android:id="@+id/et_mobile"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/White_75"
                    android:textColorHint="@color/White_95"
                    app:et_dividerCompoundPadding="true"
                    app:et_dividerErrorColor="#FFFF0000"
                    app:et_labelTextColor="@color/Blue_700"
                    app:et_supportMode="helperWithError"
                    app:et_supportSingleLine="true"
                    app:et_supportTextErrorColor="#FFFF0000" />


                <com.rey.material.widget.EditText
                    android:id="@+id/et_website"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_public_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="website"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/White_75"
                    android:textColorHint="@color/White_95"
                    app:et_dividerCompoundPadding="true"
                    app:et_dividerErrorColor="#FFFF0000"
                    app:et_labelTextColor="@color/Blue_700"
                    app:et_supportMode="helperWithError"
                    app:et_supportSingleLine="true"
                    app:et_supportTextErrorColor="#FFFF0000" />

                <com.rey.material.widget.EditText
                    android:id="@+id/et_design"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_public_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="Designation"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/White_75"
                    android:textColorHint="@color/White_95"
                    app:et_dividerCompoundPadding="true"
                    app:et_dividerErrorColor="#FFFF0000"
                    app:et_labelTextColor="@color/Blue_700"
                    app:et_supportMode="helperWithError"
                    app:et_supportSingleLine="true"
                    app:et_supportTextErrorColor="#FFFF0000" />


                <com.rey.material.widget.EditText
                    android:id="@+id/et_address"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_contact_mail_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="Address"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/White_75"
                    android:textColorHint="@color/White_95"
                    app:et_dividerCompoundPadding="true"
                    app:et_dividerErrorColor="#FFFF0000"
                    app:et_labelTextColor="@color/Blue_700"
                    app:et_supportMode="helperWithError"
                    app:et_supportSingleLine="true"
                    app:et_supportTextErrorColor="#FFFF0000" />


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_contact_mail_black_24dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="Address Line2"
                    android:maxLines="1" />

               <!-- <com.rey.material.widget.EditText
                    android:id="@+id/et_address1"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_contact_mail_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="Address Line2"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/White_75"
                    android:textColorHint="@color/White_95"
                    app:et_dividerCompoundPadding="true"
                    app:et_dividerErrorColor="#FFFF0000"
                    app:et_labelTextColor="@color/Blue_700"
                    app:et_supportMode="helperWithError"
                    app:et_supportSingleLine="true"
                    app:et_supportTextErrorColor="#FFFF0000" />-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0" />

            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>